--- a/package.json
+++ b/package.json
@@ -13,9 +13,13 @@
     "axios": "^0.27.2",
     "framer-motion": "^7.4.0",
     "react": "^18.2.0",
+    "react-d3-library": "^1.1.8",
+    "react-d3-speedometer": "^1.0.2",
     "react-dom": "^18.2.0",
+    "react-progressbar-semicircle": "^1.2.1",
     "react-router-dom": "^6.4.1",
     "react-scripts": "5.0.1",
+    "svelte-speedometer": "^1.1.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
