--- a/package.json
+++ b/package.json
@@ -7,18 +7,22 @@
     "@chakra-ui/react": "^2.3.4",
     "@emotion/react": "^11.10.4",
     "@emotion/styled": "^11.10.4",
+    "@mui/material": "^5.10.7",
+    "@mui/styled-engine-sc": "^5.10.6",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^0.27.2",
     "framer-motion": "^7.4.0",
     "react": "^18.2.0",
+    "react-circle-chart": "^1.0.4",
     "react-d3-library": "^1.1.8",
     "react-d3-speedometer": "^1.0.2",
     "react-dom": "^18.2.0",
     "react-progressbar-semicircle": "^1.2.1",
     "react-router-dom": "^6.4.1",
     "react-scripts": "5.0.1",
+    "styled-components": "^5.3.6",
     "svelte-speedometer": "^1.1.0",
     "web-vitals": "^2.1.4"
   },
